# arloc

./: .gitmodules  README.md
apriltag_ros/apriltag_ros/config/: settings.yaml  tags.yaml
apriltag_ros/apriltag_ros/include/apriltag_ros/: common_functions.h
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
apriltag_ros/apriltag_ros/src/: common_functions.cpp  continuous_detector.cpp
description/: CMakeLists.txt  package.xml  param.sh  param_office.sh  start.sh
description/launch/: final.launch  office.launch  spawn_husky.launch
description/launch/ARCHIVE/: description.launch  final.launch  setup.launch  spawn.launch  start.launch  trtlebot_nav.launch  trtlebot_world.launch
description/models/: README.md
description/models/gazebo_apriltag/models/Apriltag36_11_00000/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00001/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00002/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00003/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00004/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00005/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00006/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00007/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00008/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00009/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00010/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00011/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00012/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00013/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00014/: model.sdf
description/models/gazebo_apriltag/models/Apriltag36_11_00015/: model.sdf
description/models/husky_custom/urdf/: husky_laser_camera.urdf.xacro
description/worlds/: final.world  hope1.world  office_ar_world.world  office_ar_world_final.world  office_ar_world_old.world
description/worlds/ARCHIVE/: setup.world  simple_wall.world  simple_wall_aruco.world  simple_wall_aruco_1.world  simple_wall_aruco_2.world  test_world.world
extras/: converter.py  csv_to_tum.py  downsample.py  generateMap.py  notePoses.py  officeMap.pgm  officeMap.yaml  param.sh  synch.py  synch_poses.py
kalman/: CMakeLists.txt  package.xml
kalman/include/kalman/: header.hpp  kalman_header.hpp
kalman/src/: kalman_library.cpp  kalman_node.cpp
kalman/src/old/: kalman.cpp  kalman_funcs.cpp  kalman_lib.cxx
maps/office/: ma.yaml
maps/playpen/: map1.pgm  map1.yaml  map_env.yaml  map_final.yaml
marker_pose/: CMakeLists.txt  frames.gv  package.xml
marker_pose/include/marker_pose/: ros_headers.hpp
marker_pose/src/: abs_pose_calc.cpp  estimateTranslation.cpp  io_pose.cpp  merge_pose.cpp  merge_pose.sublime-workspace  newAmcl.cpp  resultcopy.csv  tf2Testing.cpp  tf2asd.cpp  tfr.py
plots/attempt1/office/: frames.gv  office_amcl.tum  office_amcl_poses.csv  office_ground_truth_poses.csv  office_gtruth.tum
plots/attempt1/playpen/: amcl.tum  frames.gv  ground_truth.tum  husky_amcl.csv  husky_groundtruth.csv  husky_groundtruth_final.csv  len.txt
plots/attempt1/vision/: office_vision_amcl.tum  office_vision_amcl_poses.csv  office_vision_ground_truth_poses.csv  office_vision_gtruth.tum
plots/attempt_3rdaug/: office_amcl.tum  office_amcl_dummy_poses.csv  office_amcl_poses.csv  office_ground_amcl_truth_poses.csv  office_ground_dummy_truth_poses.csv  office_ground_vision_truth_poses.csv  office_gtruth_amcl.tum  office_gtruth_vision.tum  office_vision.tum  office_vision_poses.csv
pose_update/: CMakeLists.txt  package.xml
pose_update/include/pose_update/: amcl_sampling.hpp  headers.hpp
pose_update/src/: amcl_node.cpp  amcl_sampling.cpp  poseNew.cpp  pose_fuse.cpp
pose_update/src/old/: amcl_new_lib.cpp
